Added profiles for quick builds Added checkstyle/pmd/findbugs checks and current rulesets from apnic sonar Fixed args2java.groovy not working under windows ProtocolFactory mismatch exceptions now returns more detail